add_library(tinyxml2 tinyxml2.cpp)
if(NOT BUILD_SHARED_LIBS)
    set_property(TARGET tinyxml2 PROPERTY POSITION_INDEPENDENT_CODE ON)
endif()
install(TARGETS tinyxml2
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/
    RUNTIME DESTINATION       ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION       ${CMAKE_INSTALL_LIBDIR}
    INCLUDES DESTINATION      ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/
    ARCHIVE DESTINATION       ${CMAKE_INSTALL_SHAREDSTATEDIR}
    )


set(FMT_PEDANTIC ON)
set(FMT_INSTALL ON)
add_subdirectory(fmt)


set(USE_SYSTEM_CURL ON)
set(BUILD_CPR_TESTS OFF)
FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/whoshuu/cpr.git)
FetchContent_MakeAvailable(cpr)
